objects/Panel_Detail__c.object
<CustomObject><fields>
        <fullName>Data_Access_Fee__c</fullName>
        <description>AKA Minimum Transaction Fee.</description>
        <inlineHelpText>AKA Minimum Transaction Fee.</inlineHelpText>
        <label>Data Access Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Helix_Panel_Detail__c</fullName>
        <label>Helix Panel Detail</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Panel Details</relationshipLabel>
        <relationshipName>Panel_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Panel_Quantity__c</fullName>
        <inlineHelpText>Numbers may be approximate - check Agreement for details.</inlineHelpText>
        <label>Panel Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>To accommodate multiple Helix panels and transaction fees detailed in the Marketplace Alliance Agreement.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Panel Detail</label><nameField>
        <label>Panel Detail Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Panel Details</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>